--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.json
 .idea/
-.__pycache__/
-.parse_tls/__pycache__/
-.scripts/__pycache__/
+__pycache__/
+parse_tls/__pycache__/
+scripts/__pycache__/
 
